# icp1_s3

./: CMakeLists.txt  README.md
include/sample_gtest/: CMakeLists.txt  triangle.c
tests/: CMakeLists.txt  mytests.cpp
